# RayTracing

./: .gitignore  CMakeLists.txt  main.cpp
Component/: ColliderComponent.cpp  ColliderComponent.h  Component.cpp  Component.h  RayIntersectionComponent.cpp  RayIntersectionComponent.h  RendererComponent.cpp  RendererComponent.h  SphereColliderComponent.cpp  SphereColliderComponent.h  TransformComponent.cpp  TransformComponent.h
Geometry/: Geometry.cpp  Geometry.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h
Light/: Light.cpp  Light.h
Material/: Material.cpp  Material.h
Math/: Vector.cpp  Vector.h
Scene/: Actor.cpp  Actor.h  ActorComonent.cpp  ActorComonent.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
